--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -59,7 +59,8 @@
 	"clock#1": {
 		"interval": 1,
 		"format": "{:%H:%M:%S}",
-		"tooltip": false
+		"tooltip": true,
+		"tooltip-format": "<big>{:%Y-%m-%d}</big>"
 	},
 	"clock#2": {
 		"format": "{:%H:%M}",
