--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,9 +1,8 @@
+##
+## Sway
+##    config
+##
 
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
 
 set $gnome-schema org.gnome.desktop.interface
 
