--- a/.config/sway/config
+++ b/.config/sway/config
@@ -20,9 +20,9 @@ default_floating_border none
 #hide_edge_borders both
 
 ## Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -c 0 set PCM 2db+
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer -c 0 set PCM 2db-
-bindsym XF86AudioMute exec --no-startup-id amixer -c 0 set PCM toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -D pulse set Master 1%+
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse set Master 1%-
+bindsym XF86AudioMute exec --no-startup-id amixer -D pulse set Master toggle
 
 #for_window [class="^.*"] border pixel 1
 #default_border pixel 1
