--- a/.config/cairo-dock/current_theme/cairo-dock.conf
+++ b/.config/cairo-dock/current_theme/cairo-dock.conf
@@ -13,7 +13,7 @@ screen border=3
 
 #e-[0.;1.;left;right] Relative alignment:
 #{When set to 0 the dock will position itself relative to the left corner if horizontal and the top corner if vertical. When set to 1 it will position itself relative to the right corner if horizontal and the bottom corner if vertical. When set to 0.5, it will position itself relative to the middle of the screen's edge.}
-alignment=0.5
+alignment=0
 
 #r- Multi-screens
 num_screen=0
@@ -38,23 +38,23 @@ frame_visi=
 #{Modes are sorted from the most intrusive to the less intrusive.
 #When the dock is hidden or below a window, place the mouse on the screen's border to call it back.
 #When the dock pops up on shortcut, it will appear at the position of your mouse. The rest of the time, it stays invisible, thus acting like a menu.}
-visibility=4
+visibility=1
 
 #v
 sep_visi=
 
 #L-[None;Move down;Fade out;Semi transparent;Zoom out;Folding] Effect used to hide the dock:
-hide effect=Fade out
+hide effect=Move down
 
 #e-[0;1;high;low] Callback sensitivity:
 #{The higher, the faster the dock will appear}
-edge sensitivity=0.15
+edge sensitivity=0
 
 #Y-[Hit the screen's border;0;0;Hit where the dock is;0;0;Hit the screen's corner;0;0;Hit a zone;1;2] How to call the dock back:
-callback=1
+callback=3
 
 #j-[2;999] Size of the zone :
-zone size=80;10
+zone size=300;50;
 
 #g- Image to display on the zone :
 callback image=
@@ -138,7 +138,7 @@ overwrite exception=evince;totem;gimp
 minimized=0
 
 #e-[0;.6;Opaque;Transparent] Transparency of icons whose window is minimised:
-visibility alpha=0.34999999999999998
+visibility alpha=0.433
 
 #a- Play a short animation of the icon when its window becomes active
 animation on active window=wobbly
@@ -190,14 +190,14 @@ animate subdocks=true
 
 #I-[100;600;fast;slow] Animation unfolding duration:
 #{Icons will appear folded on themselves and will then unfold until they fill the whole dock. The smaller this value, the faster this will be.}
-unfold duration=300
+unfold duration=149
 
 #v
 sep_unfold=
 
 #I-[4;40;fast;slow] Number of steps in the zoom animation (grow/shrink):
 #{The more there are, the slower it will be}
-grow nb steps=10
+grow nb steps=8
 #I-[4;40;fast;slow] ...
 shrink nb steps=8
 
@@ -206,20 +206,20 @@ sep_unhide=
 
 #I-[4;40;fast;slow] Number of steps in the auto-hide animation (move up/move down):
 #{The more there are, the slower it will be}
-move up nb steps=10
+move up nb steps=7
 #I-[4;40;fast;slow] ...
-move down nb steps=16
+move down nb steps=8
 
 #X-[Refresh rate;system-run]
 frame_cpu=
 
 #i-[5;40] Refresh rate when mouving cursor into the dock:
 #{in Hz. This is to adjust behaviour relative to your CPU power.}
-refresh frequency=35
+refresh frequency=40
 
 #i-&[15;60] Animation frequency for the OpenGL backend:
 #{in Hz. This is to adjust behaviour relative to your CPU power.}
-opengl anim freq=33
+opengl anim freq=60
 
 #i-*[15;50] Animation frequency for the Cairo backend:
 #{in Hz. This is to adjust behaviour relative to your CPU power.}
@@ -260,9 +260,9 @@ conn user=
 
 #p- Password :
 #{Let empty if you don't need to log-in to the proxy with a user/password.}
-conn passwd=
+conn passwd=6
 
-modules=Sound Effects;keyboard indicator;motion blur;clock;AlsaMixer
+modules=keyboard indicator;GMenu;clock;AlsaMixer
 
 
 [Background]
@@ -326,7 +326,7 @@ corner radius=10
 line width=2
 
 #C+ Outline colour
-line color=0;0;0;0.6
+line color=0;0;0;0.59999999999999998;
 
 
 #F
@@ -340,7 +340,7 @@ frame margin=0
 rounded bottom corner=true
 
 #b+ Stretch the dock to always fill the screen
-extended=false
+extended=true
 
 
 [Views]
@@ -349,7 +349,7 @@ extended=false
 frame_main=
 
 #n+ Choose the default view for main docks :/
-main dock view=Default
+main dock view=Panel
 
 #F+[Sub-Docks]
 frame_sub=
@@ -378,7 +378,7 @@ bg color=0;0;0;0.74509803921568629;
 line color=0;0;0;1;
 
 #c+ Text colour
-text color=1;1;1;
+text color=1;1;1;1;
 
 #i+[0;20] Corner radius
 corner=8
@@ -390,7 +390,7 @@ linewidth=1
 sep_bul=
 
 #t+ Shape of the bubble:
-decorator=tooltip
+decorator=modern
 
 
 #F+[Font;preferences-desktop-font]
@@ -497,7 +497,7 @@ launcher size=36;36;
 
 #i+[0;50] Space between icons :
 #{in pixels.}
-icon gap=4
+icon gap=8
 
 #F+[Zoom effect;/usr/share/cairo-dock/icons/icon-wave.png]
 frame_shape=
@@ -722,7 +722,7 @@ frame_bg=
 colors=0
 
 #C+ Background colour
-bg color=0.0516;0.0516;0.06;0.77;
+bg color=0.0516;0.0516;0.059999999999999998;0.77000000000000002;
 
 #C+ Outline colour
 line color=0.5;0.5;0.5;1;
@@ -734,7 +734,7 @@ text color=1;1;1;1;
 sep_shape=
 
 #i+[0;20] Corner radius
-corner=8
+corner=0
 
 #i+[1;10] Outline width
 linewidth=1
