Cairo dock edit

--- a/.config/cairo-dock/current_theme/cairo-dock.conf
+++ b/.config/cairo-dock/current_theme/cairo-dock.conf
@@ -95,16 +95,16 @@ show applications=true
 
 #B- Mix launchers and applications
 #{Allows launchers to act as applications when their programs are running and displays a marker on icons to indicate this. You can launch other occurences of the program with SHIFT+click.}
-mix launcher appli=true
+mix launcher appli=false
 
 #b- Only show applications on current desktop
-current desktop only=false
+current desktop only=true
 
 #b- Only show icons whose windows are minimised
 hide visible=false
 
 #Y-[At the beginning of the dock;0;0;Before the launchers;0;0;After the launchers;0;0;At the end of the dock;0;0;After a given icon;1;1] Place new icons
-place icons=0
+place icons=3
 
 #N Place new icons after this one
 relative icon=
@@ -114,7 +114,7 @@ separate applis=false
 
 #B- Group windows from the same application in a sub-dock ?
 #{This allows you to group all the windows of a given application into a unique sub-dock, and to act on all of the windows at the same time.}
-group by class=true
+group by class=false
 
 #s- 		Except the following classes:
 #{Enter the class of the applications, separated by a semi-colon ';'}
@@ -141,7 +141,7 @@ minimized=0
 visibility alpha=0.433
 
 #a- Play a short animation of the icon when its window becomes active
-animation on active window=wobbly
+animation on active window=
 
 #i- Maximum number of caracters in application name:
 #{"..." will be added at the end if the name is too long.}
@@ -177,7 +177,7 @@ duration=2
 force demands attention=
 
 #a- Highlight applications demanding your attention with an animation
-animation on demands attention=rotate
+animation on demands attention=
 
 
 [System]
@@ -262,7 +262,7 @@ conn user=
 #{Let empty if you don't need to log-in to the proxy with a user/password.}
 conn passwd=6
 
-modules=keyboard indicator;GMenu;clock;AlsaMixer
+modules=keyboard indicator;GMenu;clock;AlsaMixer;Clipper;netspeed
 
 
 [Background]
@@ -666,7 +666,7 @@ frame_label=
 show_labels=2
 
 #e-[0;50;more visible;less visible] Neighbouring labels visibility:
-alpha threshold=50
+alpha threshold=0
 
 #F+[Appearance;image-x-generic]
 frame_bg=
@@ -675,7 +675,7 @@ frame_bg=
 style=0
 
 #C+ Background colour
-text bg color=0;0;0;.85
+text bg color=0;0;0;0.84999999999999998;
 
 #C+ Outline colour
 text line color=1;1;1;1;
@@ -710,7 +710,7 @@ qi same=true
 qi text color=1;1;1;1;
 
 #C+ Background colour
-qi bg color=0;0;0;0.67
+qi bg color=0;0;0;0.67000000000000004;
 
 
 [Style]
@@ -719,7 +719,7 @@ qi bg color=0;0;0;0.67
 frame_bg=
 
 #Y-[System;0;0;Custom;1;3] Style
-colors=0
+colors=1
 
 #C+ Background colour
 bg color=0.0516;0.0516;0.059999999999999998;0.77000000000000002;
