shell startup text

--- a/.shellrc
+++ b/.shellrc
@@ -16,3 +16,5 @@ eval "$(fasd --init auto)"
 export PS1="\u[\w]> "
 export PROMPT="%n [%d]> "
 export RPROMPT=''
+
+echo 'Dimmite mihi, quoniam ego sum optimus'
