--- a/.shellrc
+++ b/.shellrc
@@ -10,6 +10,7 @@ alias s='systemctl'
 alias e='$SHELL_LIST_FILES'
 alias E='$SHELL_LIST_FILES -lag'
 alias sudo="doas"
+alias m='micro'
 
 eval "$(fasd --init auto)"
 
