--- a/.shellrc
+++ b/.shellrc
@@ -1,18 +1,12 @@
-SHELL_LIST_FILES='exa'
-
 alias laravel='~/.composer/vendor/bin/laravel'
 
-alias ls='$SHELL_LIST_FILES --color=auto'
 alias dofl='/usr/bin/git --git-dir=/home/igor/.dotfiles/ --work-tree=/home/igor'
 alias sorc='source ~/.shellrc'
-alias v='vim'
 alias n='nvim'
 alias rmf='rm -rf'
 alias s='systemctl'
-alias e='$SHELL_LIST_FILES'
-alias E='$SHELL_LIST_FILES -lag'
+alias e='exa -lag'
 alias sudo="doas"
-alias m='micro'
 
 export PS1="\u[\w]> "
 export PROMPT="%n [%d](%?)> "
