--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -185,7 +185,7 @@ colors:
     red:     '0xEA6C73'
     green:   '0x91B362'
     yellow:  '0xF9AF4F'
-    blue:    '0x53BDFA'
+    blue:    '0x536AFA'
     magenta: '0xFAE994'
     cyan:    '0x90E1C6'
     white:   '0xC7C7C7'
@@ -196,7 +196,7 @@ colors:
     red:     '0xF07178'
     green:   '0xC2D94C'
     yellow:  '0xFFB454'
-    blue:    '0x59C2FF'
+    blue:    '0x59A6FF'
     magenta: '0xFFEE99'
     cyan:    '0x95E6CB'
     white:   '0xFFFFFF'
