--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,11 +32,18 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -D pulse set Master 1%+
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse set Master 1%-
 bindsym XF86AudioMute exec --no-startup-id amixer -D pulse set Master toggle
 
+exec swayidle -w \
+                timeout 300 'swaylock -F -c 121212' \
+                timeout 600 'swaymsg "output * dpms off"' \
+                     resume 'swaymsg "output * dpms on"' \
+                before-sleep 'swaylock -F -c 121212'
+
 #for_window [class="^.*"] border pixel 1
 #default_border pixel 1
 
 input * {
     xkb_layout 	"us,ru"
+#		xkb_variant "dvp",
     xkb_options "grp:lctrl_lwin_toggle,grp_led:scroll"
 	xkb_model "pc105"
 }
