--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,4 +1,3 @@
-##
 ## Sway
 ##    config
 ##
@@ -254,7 +253,16 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    swaybar_command waybar
+		position top
+		font "Liberation Mono Normal 8"
+		colors {
+				focused_workspace  #7a52a9 #7a52a9 #fcfcfc
+				statusline 				 #fcfcfc
+				background 				 #101010
+				inactive_workspace #101010 #101010 #fcfcfc
+		}
+		#status_command i3status-rs
+    #swaybar_command waybar
 }
 
 #exec_always waybar
