--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -6,6 +6,7 @@
 
 	"modules-left": [
 		"sway/workspaces",
+		"sway/mode"
 	],
 	"modules-center": [
 		"clock"
@@ -27,7 +28,7 @@
 
 	"clock": {
 		"interval": 1,
-		"format": "{:%Y-%m-%d\nT%H:%M:%S}",
+		"format": "{:%Y-%m-%dT%H:%M:%S}",
 		"tooltip": true,
 	},
 
