--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -2,6 +2,13 @@
 block = "sound"
 step_width = 3
 
+[[block]]
+block = "time"
+format = "%FT%T"
+timezone = "Europe/Moscow"
+interval = 1
+locale = "en_US"
+
 [theme]
 name = "native"
 [icons]
