--- a/.config/sway/config
+++ b/.config/sway/config
@@ -33,10 +33,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id amixer -D pulse set Master 1%-
 bindsym XF86AudioMute exec --no-startup-id amixer -D pulse set Master toggle
 
 exec swayidle -w \
-                timeout 300 'swaylock -F -c 121212' \
-                timeout 600 'swaymsg "output * dpms off"' \
-                     resume 'swaymsg "output * dpms on"' \
-                before-sleep 'swaylock -F -c 121212'
+                timeout 300 'swaylock -F -c 121212'
 
 #for_window [class="^.*"] border pixel 1
 #default_border pixel 1
