Small TYPO change

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -44,11 +44,13 @@ input * {
     xkb_options "grp:lctrl_lwin_toggle,grp_led:scroll,ctrl:nocaps"
 	xkb_model "pc105"
 }
-input "2522:37008:A4TECH_USB_Device" accel_profile flat
+input "2522:37008:A4TECH_USB_Device" {
+	accel_profile flat
+}
 input "2:7:SynPS/2_Synaptics_TouchPad" {
 	tap 					enabled
 	dwt 					disabled
-	scroll_factor 0.5
+#	scroll_factor 0.5
 }
 
 bindsym Pause exec grim
