--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,14 +1,29 @@
-##
 ##   I3
 ##    config
 ##
 
-gaps inner 5
+# Colors from Deb_Dots arc theme
+set $active #5294E2
+#set $active #88C0D0
+#set $active 	#FF4040
+set $unfocused	#FFFFFF
+set $fg		#FFFFFF
+set $bg		#383c4a
+set $bar	#404552
 
-font pango:Liberation Mono 8
+#Window Border color			border		backgr		text				indicator
+client.focused						$active		$active		$fg					$fg
+client.focused_inactive		$bg     	$bg				$unfocused	$fg
+client.unfocused					$bg     	$bg				$unfocused	$fg
+client.urgent							$bg     	$bg				$fg					$fg
+
+#gaps inner 2
+
+font "Liberation Mono 8"
 
 title_align center
-default_border pixel 2
+#default_border pixel 2
+default_border pixel 1
 default_floating_border none
 #hide_edge_borders both
 
@@ -20,13 +35,7 @@ bindsym XF86AudioMute exec --no-startup-id amixer -D pulse set Master toggle
 #for_window [class="^.*"] border pixel 1
 #default_border pixel 1
 
-client.focused 		#81a2be #81a2be #1d1f21 #282a2e
-client.focused_inactive #373b41 #373b41 #969896 #282a2e
-client.unfocused 	#282a2e #282a2e #969896 #282a2e
-client.urgent 		#373b41 #cc6666 #ffffff #cc6666
-
-
-bindsym Pause exec /home/igor/.config/sway/backlight.sh
+bindsym Pause exec grim
 
 ### Variables
 #
@@ -48,7 +57,6 @@ set $menu bemenu-run
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-#
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
@@ -81,7 +89,7 @@ set $menu bemenu-run
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
-floating_modifier Mod1
+
 ### Key bindings
 #
 # Basics:
@@ -93,7 +101,7 @@ floating_modifier Mod1
     bindsym $mod+Shift+q kill
 
     # Start your launcher
-	bindsym $mod+d exec --no-startup-id dmenu_run
+    bindsym $mod+d exec $menu
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -102,10 +110,10 @@ floating_modifier Mod1
     # mouse button for dragging.
 
     # Reload the configuration file
-    bindsym $mod+Shift+c reload
+    bindsym $mod+Shift+c restart
 
     # Exit sway (logs you out of your Wayland session)
-	bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+		bindsym Mod1+Shitf+e exec "i3-nagbar -t warning -m 'Do you want to exit?' -B 'Y' 'i3-msg exit'"
 #
 # Moving around:
 #
@@ -224,6 +232,16 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-	status_command i3status
+		position top
+		font "Liberation Mono Normal 8"
+		colors {
+				focused_workspace  #7a52a9 #7a52a9 #fcfcfc
+				statusline 				 #fcfcfc
+				background 				 #101010
+				inactive_workspace #101010 #101010 #fcfcfc
+		}
+		status_command i3status-rs
+    #swaybar_command waybar
 }
 
+#exec_always waybar
