Added a lot of ignoring files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
 .dotfiles
-.zsh_history
+.zhistory
 .gitconfig
+data/
+downloads/
+pictures/
+src/
+.zcompdump
+.xinitrc
+.wine/
+.wget-hsts
+.waterfox/
+.vim/
+.steam*
+.ssh/
+.rustup/
+.pulse-cookie
+.pki/
+.local/
+.gnupg/
+.dbus/
+.cargo/
+.cache/
+.bash*
+.Xauthority
+
+secrtetPassword.txt
+whyAreYouReadingMyGitIgnore.question
+
+.emacs.d/places
+.emacs.d/*~
+.emacs.d/elpa/
+.emacs.d/auto-save-list/
