--- a/.config/pikaur.conf
+++ b/.config/pikaur.conf
@@ -14,9 +14,9 @@ alwaysusedynamicusers = no
 ignorearch = no
 
 [review]
-noedit = no
+noedit = tes
 donteditbydefault = yes
-nodiff = no
+nodiff = yes
 gitdiffargs = --ignore-space-change,--ignore-all-space
 diffpager = auto
 hidedifffiles = .SRCINFO
